--- a/server/views/newsLetter.ejs
+++ b/server/views/newsLetter.ejs
@@ -12,14 +12,32 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 		<script src="http://cdn.rawgit.com/davidstutz/bootstrap-multiselect/master/dist/js/bootstrap-multiselect.js" type="text/javascript"></script>
-		<script>tinymce.init({ selector:'textarea' });</script>
+		<script>
+		tinymce.init({
+			selector:'textarea',
+	        theme: 'modern',
+			plugins: [
+			    'advlist autolink lists link image charmap print preview hr anchor pagebreak',
+			    'searchreplace wordcount visualblocks visualchars code fullscreen',
+			    'insertdatetime media nonbreaking save table contextmenu directionality',
+			    'emoticons template paste textcolor colorpicker textpattern imagetools'
+			  ],
+			toolbar1: 'insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link image',
+  			toolbar2: 'print preview media | forecolor backcolor emoticons',
+			image_advtab: true,	 
+			content_css: [
+    		'//fast.fonts.net/cssapi/e6dc9b99-64fe-4292-ad98-6974f93cd2a2.css',
+   			'//www.tinymce.com/css/codepen.min.css'
+  			]
+		});
+		</script>
 		<script type="text/javascript"> 
 			$(function () {
 		        $('#lstFruits').multiselect({
 		        	buttonWidth: '300px',
 		        	enableFiltering: true,
 		            includeSelectAllOption: true,
-		            maxHeight: 300
+		            maxHeight: 350
 		        });   
 			});
 		</script>
@@ -31,12 +49,15 @@
 			<form class="form-horizontal" method="POST" action="/admin/newsletter">
 				<div class="row">
 				    <div class="col-sm-8">
+				    	<div class="form-group">
+				    		<input type="text" placeholder="Subject" name="subject" style="width:100%;height:40px"></input>
+				    	</div>
 						<div class="form-group">
 							<textarea class="form-control" id="emailBody" name="emailBody" rows="10"></textarea>
 						</div>
 					</div>		
 					<div class="col-sm-4">
-						<h3>Send Email to : </h3>
+						<h3>Send mail to : </h3>
 						<div class="form-group">
 							<select id="lstFruits" name="select" multiple="multiple">
 								<% for (var i = 0; i < subscribers.length; i++) { %>
@@ -51,7 +72,7 @@
 				</div>
 	      		<div class="row">
 	        		<div class="col-sm-8 form-group">
-	            		<button class="btn btn-lg btn-info btn-default pull-right" type="submit">Send</button>
+	            		<button class="btn btn-lg btn-info pull-right" type="submit">Send</button>
 	        		</div>
 	      		</div>
 			</form>
