--- a/server/views/login.ejs
+++ b/server/views/login.ejs
@@ -9,12 +9,24 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 		<style type="text/css">
+	
+		body { 
+		  background: url("banner.png") no-repeat center center fixed;
+		  -webkit-background-size: cover;
+		  -moz-background-size: cover;
+		  -o-background-size: cover;
+		  background-size: cover;
+		}
 		.jumbotron{
-			background-color: #C8C8C8; 
+			background-color: #675c8a;
 			margin-top: 100px;
 
 		}
+		.lbl{
+			color : white;
+		}
 		h3{
+			color : white;
 			text-align: center;
 		}
 
@@ -41,13 +53,13 @@
     						</div>
   						</div>
   						<div class="form-group">
-    						<label class="control-label col-sm-4" for="newpass">New Password:</label>
+    						<label class="control-label col-sm-4 lbl" for="newpass">New Password  :</label>
     						<div class="col-sm-8">
       							<input type="password" class="form-control" id= "newpass"name="newpass">
     						</div>
   						</div>
   						<div class="form-group">
-     						<label class="control-label col-sm-4" for="conpass">Confirm Password:</label>
+     						<label class="control-label col-sm-4 lbl" for="conpass">Confirm Password  :</label>
     						<div class="col-sm-8">
       							<input type="password" onchange="myFunction()" class="form-control" id= "conpass" name="conpass">
     						</div>
