--- a/server/views/verified.ejs
+++ b/server/views/verified.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Password Reset</title>
+		<title>Email Verification</title>
 	    <meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		 <!-- Latest compiled and minified CSS -->
