update api part 1

--- a/server/views/verify.ejs
+++ b/server/views/verify.ejs
@@ -1,1 +1,9 @@
-<%= text %>
+<html>
+	<body>
+		<p>Thank you for registering with us. One more step to experience your environment and create your way. First we would need to verify your account, helps us get you back in if you’re ever locked out of your account. To verify, just go ahead and
+        <a href="<%=verifyHref%>">click here</a>. You should be good to go.
+        <br><br>
+        If the above link doesn’t work, please copy the URL below and paste it in your browser: <%=verifyHref%>
+        </p>
+	</body>
+</html>
